# merienda-dashboard

./: .env.example  .gitignore  entrypoint.py  pyproject.toml  rxconfig.py
merienda/: cfg.py  merienda.py
